🌊🚿 Checkpoint ./komutlar/ban.js:27577360/72 ./komutlar/kick.js:27577360/72 ./komutlar/modlog.js:27577360/68 ./komutlar/temizle.js:27577360/46 ./komutlar/yardım.js:27577360/96 ./ayarlar.json:27577360/38 ./json.sqlite:27577360/8191 ./package.json:27577360/74 ./bot.js:27577360/351

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hello-express",
   "version": "0.0.1",
-  "description": "CodeWork v12 Boş Altyapı",
+  "description": "Synx v12 Guard Bot Altyapı",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
